# lis

./: .gitignore  configure  configure.ac  make.sh
include/: Makefile.am  lis.h  lis_io.h  lis_matmat.h  lis_matrix.h
lis/: .gitattributes  .gitignore  Makefile  post.js  pubspec.yaml
lis/example/: ex1.dart  ex1.html  test1.dart  test1.html  testmat.dart
lis/lib/: dlis.dart  lis.dart  zlis.dart
lis/test/: esolver_test.dart  lis_test.dart  lis_test.html  matrix_test.dart  module_test.dart  native_test.dart  random.dart  rts.dart  solver_test.dart  vector_test.dart  vector_test.html
src/: Makefile.am  Makefile.in
src/array/: lis_array.c
src/esolver/: lis_esolver.c  lis_esolver_ai.c  lis_esolver_aii.c  lis_esolver_cg.c  lis_esolver_ii.c  lis_esolver_jd.c  lis_esolver_li.c  lis_esolver_pi.c  lis_esolver_rqi.c  lis_esolver_si.c
src/matmat/: Makefile.am  Makefile.in  lis_matmat.c  lis_matmat_csr.c
src/matrix/: lis_matrix.c  lis_matrix_bsr.c  lis_matrix_csc.c  lis_matrix_csr.c  lis_matrix_dia.c  lis_matrix_diag.c  lis_matrix_ell.c  lis_matrix_ilu.c  lis_matrix_jad.c  lis_matrix_msr.c  lis_matrix_ops.c
src/matvec/: lis_matvec.c  lis_matvec_bsc.c  lis_matvec_bsr.c  lis_matvec_dia.c  lis_matvec_ell.c  lis_matvec_jad.c  lis_matvec_msr.c  lis_matvec_vbr.c
src/precon/: lis_precon_ads.c  lis_precon_hybrid.c  (+4 more)
test/: Makefile.am  Makefile.in  etest1.c  etest2.c  etest3.c  etest4.c  etest5.c  etest6.c  spmvtest1.c  spmvtest2.c  spmvtest2b.c  spmvtest3.c  spmvtest3b.c  spmvtest4.c  spmvtest5.c  test.sh  test1.c  test2.c  test2b.c  test3.c  test3b.c  test4.c  test5.c
(+51 files in other folders)
